apps/api/kube/virtual-services/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sd-example
  namespace: test
spec:
  host: sd-example
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
