apps/api/kube/virtual-services/sd-example-vsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sd-example
  namespace: test
spec:
  hosts:
    - sd-example
  http:
  - route:
    - destination:
        host: sd-example
        subset: v1
      weight: 100
